# argocd-lint

./: .goreleaser.yaml  Cargo.toml  Containerfile  README.md  config.yaml
.github/workflows/: build.yaml  release.yaml
src/: argo.rs  checks.rs  config.rs  lib.rs  main.rs  model.rs  tracing.rs  util.rs
src/argo/: application.rs
