[package]
name = "argocd-lint"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.94"
clap = "4.5.23"
config = "0.14.1"
serde = { version = "1.0.216", features = ["derive"] }

yaml = "0.3.0"
yaml-rust = "0.4.5"

# tracing
tracing = { version = "0.1", features = ["log"] }
log = { version = "0.4", features = ["max_level_info", "release_max_level_info"] }
tokio = { version = "1", features = ["full"]}
tempfile = "3.14.0"
fancy = "0.3"
rayon = "1.10.0"
